# Claude_Commander

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/claude_commander/: __init__.py  cli.py  defaults.py  models.py  ollama.py  pipeline_store.py  profile_store.py  registry.py  resolver.py  server.py
tests/: test_advanced.py  test_cli.py  test_defaults.py  test_ollama.py  test_pipeline_store.py  test_registry.py  test_resolver.py  test_server.py  test_verification.py
