[project]
name = "claude-commander"
version = "0.1.0"
description = "Lean MCP server for direct Ollama model calls"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14,<3",
    "pydantic>=2.8",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99
